# Graphs-isomorphism

./: .gitignore  CMakeLists.txt  Graph.cpp  Graph.h  README.md  Topology.cpp  Topology.hpp  graphs.sln  graphs.vcxproj  graphs.vcxproj.filters  main.cpp
Debug/: graphs.ilk
Debug/graphs.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  graphs.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build_ustav/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
